--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,10 +12,10 @@ environment:
   global:
       MINGW_32: C:\mingw-w64\i686-6.3.0-posix-dwarf-rt_v5-rev1\mingw32\bin
       MINGW_64: C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1\mingw64\bin
-      OPENBLAS_32: "https://3f23b170c54c2533c070-1c8a9b3114517dc5fe17b7c3f8c63a43.ssl.cf2.rackcdn.com/openblas-2c7392f0_gcc6_3_0_win32.zip"
-      OPENBLAS_64: "https://3f23b170c54c2533c070-1c8a9b3114517dc5fe17b7c3f8c63a43.ssl.cf2.rackcdn.com/openblas-2c7392f0_gcc6_3_0_win64.zip"
+      OPENBLAS_32: "https://3f23b170c54c2533c070-1c8a9b3114517dc5fe17b7c3f8c63a43.ssl.cf2.rackcdn.com/openblas-2c7392f0_gcc7_3_0_win32.zip"
+      OPENBLAS_64: "https://3f23b170c54c2533c070-1c8a9b3114517dc5fe17b7c3f8c63a43.ssl.cf2.rackcdn.com/openblas-2c7392f0_gcc7_3_0_win64.zip"
       OPENBLAS_32_SHA256: 4faaa231e29f806fb9f23b68a3b3d9671b7610627d48846a0bda61c63e5a9a52
-      OPENBLAS_64_SHA256: af487b0cf304efec8b14d73e125dd6b4aea6356ed3e80edf66b617de9b237e81
+      OPENBLAS_64_SHA256: e9cef554889de6079a83f8f6d4ed67e07e7a8666bc105a080c0732fc8c76221b
       CYTHON_BUILD_DEP: Cython==0.26.1
       NUMPY_TEST_DEP: numpy==1.13.1
       TEST_MODE: fast
@@ -32,6 +32,11 @@ environment:
     - PYTHON: C:\Python36
       PYTHON_VERSION: 3.6
       PYTHON_ARCH: 32
+      NUMPY_BUILD_DEP: numpy==1.12.1
+
+    - PYTHON: C:\Python36-x64
+      PYTHON_VERSION: 3.6
+      PYTHON_ARCH: 64
       NUMPY_BUILD_DEP: numpy==1.12.1
 
 init:
