--- a/appveyor.yml
+++ b/appveyor.yml
@@ -216,7 +216,7 @@ test_script:
   - mkdir tmp_test
   - cd tmp_test
   - python ..\check_license.py
-  - python ..\run_scipy_tests.py %TEST_MODE% -- -n6 --junitxml=%cd%\junit-results.xml -rfEX -t scipy.linalg
+  - python ..\run_scipy_tests.py %TEST_MODE% -- -n6 --junitxml=%cd%\junit-results.xml -rfEX scipy.linalg
 
 after_test:
   # Upload test results to Appveyor
